Add Java 8 compatibility
- Remove all List.of
- Remove all Set.of
- Change File reading